--- a/index.html
+++ b/index.html
@@ -4,67 +4,134 @@
   <meta charset="UTF-8">
   <title>Pong Multiplayer</title>
   <style>
-    body { 
-      font-family: Arial, sans-serif; 
-      background: #f0f0f0; 
-      margin: 0; 
+    /* Stili di base e per le varie schermate */
+    body {
+      font-family: Arial, sans-serif;
+      background: #f0f0f0;
+      margin: 0;
       padding: 0;
     }
-    #header { 
-      background: #333; 
-      color: #fff; 
-      padding: 10px; 
-      text-align: center; 
+    #header {
+      background: #333;
+      color: #fff;
+      padding: 10px;
+      text-align: center;
     }
-    #lobby { 
-      padding: 20px; 
-      text-align: center; 
+    .screen {
+      display: none;
+      padding: 20px;
+      text-align: center;
+      max-width: 800px;
+      margin: 0 auto;
     }
-    #roomControls button { 
-      padding: 10px 20px; 
-      margin: 5px; 
-      font-size: 16px; 
+    button {
+      padding: 10px 20px;
+      margin: 10px;
+      font-size: 16px;
     }
-    #controls { margin-top: 20px; }
-    #pongCanvas { 
-      border: 2px solid #333; 
-      display: none; 
-      margin: 20px auto; 
-      background: #fff; 
+    #roomList {
+      margin: 20px auto;
+      max-width: 400px;
+      text-align: left;
+      list-style: none;
+      padding: 0;
+    }
+    #roomList li {
+      background: #fff;
+      padding: 10px;
+      margin: 5px 0;
+      border: 1px solid #ccc;
+      cursor: pointer;
+    }
+    #pongCanvas {
+      border: 2px solid #333;
+      background: #fff;
+      margin: 20px auto;
       display: block;
     }
-    #log { 
-      max-width: 800px; 
-      margin: 10px auto; 
-      padding: 10px; 
-      background: #fff; 
-      border: 1px solid #ccc; 
-      height: 100px; 
-      overflow-y: auto; 
+    #log {
+      max-width: 800px;
+      margin: 10px auto;
+      padding: 10px;
+      background: #fff;
+      border: 1px solid #ccc;
+      height: 100px;
+      overflow-y: auto;
+      text-align: left;
     }
-    #status { font-size: 18px; margin-top: 10px; }
+    #lobbyStatus, #status {
+      font-size: 18px;
+      margin: 10px;
+    }
+    /* Overlay per il messaggio di fine partita */
+    #winnerOverlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0,0,0,0.7);
+      color: #fff;
+      font-size: 36px;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      z-index: 1000;
+    }
+    #winnerOverlay button {
+      margin-top: 20px;
+      font-size: 24px;
+    }
   </style>
 </head>
 <body>
   <div id="header">
     <h1>Pong Multiplayer</h1>
   </div>
-  <div id="lobby">
-    <div id="roomControls">
-      <button id="createRoom">Crea Stanza</button>
-      <button id="joinRoom">Entra in Stanza</button>
-    </div>
-    <div id="status"></div>
-    <div id="controls"></div>
+  
+  <!-- Schermata Home -->
+  <div id="homeScreen" class="screen" style="display: block;">
+    <h2>Benvenuto in Pong Multiplayer</h2>
+    <button id="btnCreateRoom">Crea Stanza</button>
+    <button id="btnJoinRoom">Unisciti a una Stanza</button>
   </div>
-  <canvas id="pongCanvas" width="800" height="600"></canvas>
+  
+  <!-- Schermata per la lista delle stanze (per join) -->
+  <div id="roomListScreen" class="screen">
+    <h2>Stanze Disponibili</h2>
+    <ul id="roomList"></ul>
+    <button id="btnRefreshRooms">Aggiorna Stanze</button>
+    <button id="btnBackHomeFromRooms">Torna al Menu Principale</button>
+  </div>
+  
+  <!-- Schermata Lobby -->
+  <div id="lobbyScreen" class="screen">
+    <h2>Lobby</h2>
+    <div id="lobbyStatus"></div>
+    <div id="lobbyControls"></div>
+  </div>
+  
+  <!-- Schermata Gioco -->
+  <div id="gameScreen" class="screen">
+    <canvas id="pongCanvas" width="800" height="600"></canvas>
+    <div id="gameControls">
+      <button id="btnBackToLobby">Torna alla Lobby</button>
+    </div>
+  </div>
+  
+  <!-- Overlay per mostrare il vincitore -->
+  <div id="winnerOverlay">
+    <div id="winnerMessage"></div>
+    <button id="btnRestartGame">Nuova Partita</button>
+    <button id="btnReturnHome">Torna al Menu</button>
+  </div>
+  
   <div id="log"></div>
   
-  <!-- Socket.io verrà servito dal server -->
+  <!-- Includiamo Socket.io, il modulo WASM (pong.js/pong.wasm) e lo script client -->
   <script src="/socket.io/socket.io.js"></script>
-  <!-- Il modulo WASM (pong.js e pong.wasm) verrà generato compilando pong.cpp con Emscripten -->
   <script src="pong.js"></script>
-  <!-- Script per la gestione della lobby, del signaling WebRTC e dei log -->
   <script src="app.js"></script>
 </body>
 </html>
