Bug Fix Tattico

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
   <div id="log"></div>
   
   <script src="/socket.io/socket.io.js"></script>
-  <script src="pong.js"></script>
+  <script src="wasm/pong.js"></script>
   <script type="module" src="js/main.js"></script>
 </body>
 
